--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Sequi assumenda recusandae eum temporibus dolorem sunt magni 
+                sed quam nam pariatur? At mollitia blanditiis architecto facere 
+                consequatur esse nobis, inventore voluptas.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quo id temporibus minima iste at repudiandae, earum ipsum sequi. 
+                Distinctio delectus assumenda ullam quos. Assumenda labore rerum 
+                quibusdam magnam dolorum cum.</p>
         </article>
     </main>
 </body>
